# cstar

./: .clang-format  .gitignore  .mem-trace  CMakeLists.txt  README.md  app  generated  hello.cxy
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: alpine.yml  cmake-single-platform.yml  cxy-compiler.yaml  cxy-development-env.yml  cxy.alpine.yml  cxy.ubuntu.yml  dev.alpine.yml  dev.ubuntu.yml
.woodpecker/: build.yml
benchmarks/: nbodies.c  nbodies.cxy
cmake/: CxyUtils.cmake  FindcJSON.cmake
docker/: Dockerfile.alpine  Dockerfile.alpine.cxy  Dockerfile.alpine.dev  Dockerfile.cxy  Dockerfile.dev  Dockerfile.ubuntu.cxy  Dockerfile.ubuntu.dev
docs/: comptime.md  docs.md  exceptions.md
docs/stdlib/: args.md  json.md  os.md
examples/: add.c  add.h  fetch.cxy  fs.cxy  hello.cxy  hello.inc.cxy  http.cxy  server.cxy  server.js  sub.h
src/cxy/: builtins.cxy
src/cxy/core/: alloc.h  args.c  args.h  array.c  array.h  e4c.c  e4c.h  format.c  format.h  hash.c  hash.h  hmap.c  hmap.h  htable.c  htable.h  log.c  log.h  mempool.c  mempool.h  primes.h  sb.c  sb.h  strpool.c  strpool.h  utils.c  utils.h
src/cxy/driver/: c.h  cc.c  cc.h  config.h  cxyfile.c  driver.c  driver.cpp  driver.h  driver.hpp  main.c  main.cpp  options.c  options.h  stages.c  stages.h  stats.c  stats.h
src/cxy/driver/c-import/: context.cpp  context.hpp  import.cpp  import.hpp
src/cxy/lang/: ast.c  ast.h  builtins.c  builtins.cxy  builtins.h  capture.c  capture.h  check.c  check.h  codec.h  codegen.c  codegen.h  decode.c  encode.c  eval.c  eval.h  flag.h  generics.c  lexer.c  lexer.h  node.c  node.h  operations.h  operator.c  operator.h  parser.c  parser.h  scope.c  scope.h  semantics.c  semantics.h  strings.c  strings.h  tcheck.c  tcheck.h  token.h  ttable.c  ttable.h  types.c  types.h  (+4 more)
src/cxy/lang/backend/: init.cpp
src/cxy/lang/backend/c/: generate.c
src/cxy/lang/backend/llvm/: array.cpp  backend.cpp  backend.h  binary.cpp  codegen.cpp  context.cpp  context.h  debug.cpp  debug.h  for.cpp  generate.cpp  llvm.cpp  llvm.h  prepare.c  simplify.c
src/cxy/lang/ccodegen/: ccodegen.h  epilogue.c  epilogue.cxy.c  generate.c  prologue.c  prologue.cxy.c  stringexpr.c
src/cxy/lang/ffi/: import.cpp  import.h
src/cxy/lang/frontend/: ast.c  ast.h  capture.c  capture.h  codec.h  decode.c  defines.c  defines.h  encode.c  flag.h  lexer.c  lexer.h  module.c  operator.c  operator.h  operators.def  parser.c  parser.h  primitives.def  primitives.h  strings.c  strings.h  token.c  token.h  tokens.def  ttable.c  ttable.h  types.c  types.h  visitor.c  visitor.h
src/cxy/lang/middle/: builtins.c  builtins.cxy  builtins.h  comptime.h  defer.c  macro.c  macro.h  mangle.c  mangle.h  n2e.c  n2e.h  operations.h  scope.c  scope.h
src/cxy/lang/middle/bind/: bind.c  bind.h  discover.c  resolve.c  scope.c
src/cxy/lang/middle/check/: array.c  assign.c  binary.c  builtins.c  call.c  cast.c  check.c  check.h  class.c  closure.c  defaults.c  enum.c  function.c  generics.c  if.c  index.c  match.c  member.c  module.c  node.c  path.c  struct.c  switch.c  tuple.c  type.c  unary.c
src/cxy/lang/middle/dump/: cxy.c  json.c  source.c  yaml.c
src/cxy/lang/middle/eval/: binary.c  comptime.c  enum.c  eval.c  eval.h  for.c  (+7 more)
src/cxy/lang/native/: c.c  coro.c  epilogue.cxy.c  evloop.c  main.c.h  prologue.cxy.c  scheduler.c  setup.h  tgc.h  thread.c
src/cxy/lang/nodes/: array.c  assign.c  attributes.c  binary.c  block.c  builtins.c  call.c  cast.c  ccode.c  closure.c  codegen.c  codegen.h  comptime.c  coroutine.c  define.c  enum.c  forstmt.c  function.c  generics.c  if.c  index.c  literals.c  macro.c  member.c  module.c  new.c  path.c  range.c  return.c  semantics.c  semantics.h  strexpr.c  struct.c  switch.c  ternary.c  tuple.c  type.c  unary.c  variables.c  while.c
src/cxy/lang/operations/: binary.c  binary.h  bind.c  check.c  check.h  codec.h  codegen.c  codegen.h  collect.c  comptime.c  coroutine.c  deserialize.c  desugar.c  dump.c  eval.c  eval.h  finalize.c  json.c  json.h  macro.c  macro.h  serialize.c  sexpr.c  shake.c  shake.h  yaml.c
src/cxy/lang/runtime/: asm.c  async.c  async.h  builtins.cxy  c-stubs.h  epilogue.c  epilogue.h  prologue.h  runtime.c  runtime.h
src/cxy/runtime/: builtins.cxy  builtins.test.cxy
src/cxy/stdlib/: args.cxy  array.cxy  base64.cxy  build.cxy  builtins.cxy  c.cxy  coro.cxy  fetch.cxy  fserver.cxy  hash-old.cxy  hash.cxy  hash2.cxy  http.cxy  int.cxy  io.cxy  json.cxy  list.cxy  log.cxy  map.cxy  net.cxy  os.cxy  path.cxy  scheduler.cxy  ssl.cxy  str.cxy  string.cxy  strlib.cxy  tcp.cxy  tgc.c  thread.cxy  time.cxy  trie.cxy  utils.cxy  vector.cxy
src/cxy/stdlib/dns/: dns.c  dns.h
src/cxy/stdlib/native/: index.cxy  memtrace.c  nos.c  nos.h
src/tools/: amalgamate.c  download-cxy.sh  escape.c  mem-analysis.rb  mem.rb
stage1/: main.cxy
stage1/core/: format.cxy  log.cxy  memory.cxy
stage1/frontend/: lexer.cxy  token.cxy
test/: runner.sh
test/lang/: generated.c  hello.cxy  literals.cxy  literals.expected
tests/: README.md  add.cxy  add.h  hello.cxy  hello.cxy.ll  math.cxy  runner.sh  server.cxy
tests/backend/: literal.cxy
tests/lang/: closure.cxy  closure.expected  closure.expected.dump  closure.expected.yml  literals.cxy  literals.expected  literals.expected.dump  literals.expected.yml  tuples.cxy  tuples.expected  tuples.expected.dump  tuples.expected.yml  varargs.cxy  varargs.expected  varargs.expected.dump  varargs.expected.yml  variables.cxy  variables.expected  variables.expected.dump  variables.expected.yml
tests/lang/frontend/__snapshots/: closure.cxy  literals.cxy  tuples.cxy  varargs.cxy  variables.cxy
tests/lang/frontend/lexer/: comments.cxy  invalid-integers.cxy  keywords.cxy  literals.cxy  operators.cxy  run.cfg  strexpr.cxy  unterminated-comment.cxy  unterminated-nested-comment.cxy
tests/lang/frontend/parser/: asm-errors.cxy  asm.cxy  closure.cxy  for.cxy  functions.cxy  if.cxy  invalid-funcs.cxy  literals.cxy  run.cfg  tuples.cxy  varargs.cxy  while.cxy
tests/lang/middle/mem/: run.cfg
tests/utils/: lexer.cpp
(+125 files in other folders)
